cmake_minimum_required(VERSION 3.5.1)
project(CrossGuid)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
if(NOT WIN32 AND NOT WIN64)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
endif()

option(XG_TESTS "Build test runner" OFF)

include_directories(.)
set(CMAKE_CXX_STANDARD 11)

add_library(xg Guid.cpp)

if (XG_TESTS)
	add_executable(xgtest test/TestMain.cpp test/Test.cpp)
	set(XGTEST_LIBS xgtest xg)
    if(NOT WIN32 AND NOT WIN64)
	    list(APPEND XGTEST_LIBS c++ c++abi)
    endif()
	target_link_libraries(${XGTEST_LIBS})
endif()


if(WIN32)
	add_definitions(-DGUID_WINDOWS)
elseif(APPLE)
	find_library(CFLIB CoreFoundation)
	target_link_libraries(xg ${CFLIB})
	add_definitions(-DGUID_CFUUID)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
elseif(ANDROID)
	target_compile_definitions(xg PRIVATE GUID_ANDROID)
else()
	find_package(Libuuid REQUIRED)
	if (NOT LIBUUID_FOUND)
		message(FATAL_ERROR
			"You might need to run 'sudo apt-get install uuid-dev' or similar")
	endif()
	include_directories(${LIBUUID_INCLUDE_DIR})
	target_link_libraries(xg ${LIBUUID_LIBRARY} c++ c++abi)
	add_definitions(-DGUID_LIBUUID)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -std=c++17 -stdlib=libc++")
endif()
